--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       # setup key
       - run: set -eu
       - run: mkdir "$HOME/.ssh"
-      - run: "${{secrets.key}}" > "$HOME/.ssh/key"
+      - run: echo "${{secrets.key}}" > "$HOME/.ssh/key"
       - run: chmod 600 "$HOME/.ssh/key"
 
       # build
